# nodary

./: .coverage  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: DESIGN.md  TODO.md
src/nodary/: cli.py  pipeline.py
src/nodary/feature_extraction/: __init__.py  extract.py  normalize.py  profiles.py  records.py
src/nodary/imap_sync/: __init__.py  bodystructure.py  client.py  sync.py
src/nodary/mail_store/: __init__.py  emlx.py  store.py  transport.py
src/nodary/scoring/: __init__.py  engine.py  registry.py  tiers.py
src/nodary/storage/: __init__.py  db.py  keys.py  schema.sql
src/nodary/ui/: server.py  tls.py
src/nodary/ui/templates/: index.html
tests/: conftest.py  fake_imap.py  test_cli.py  test_db_encrypted.py  test_determinism.py  test_emlx.py  test_mail_store.py  test_normalize.py  test_scoring_behavior_shift.py  test_scoring_cold_outreach.py  test_scoring_lookalike.py  test_sync_incremental.py  test_tiers.py  test_ui.py  test_ui_tls.py
