[project]
name = "nodary"
version = "0.3.0"
description = "Local-first email heuristic analysis client. All analysis on-device."
requires-python = ">=3.12"
dependencies = [
    "imapclient>=3.0",
    "keyring>=25.0",
    "flask>=3.0",
    "tldextract>=5.1",
]

[project.optional-dependencies]
sqlcipher = ["sqlcipher3-wheels>=0.5"]

[project.scripts]
nodary = "nodary.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nodary"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "SIM108",  # ternaries are not always clearer
    "E501",    # long explanation strings in scoring are intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
